# itAcademy_project

./: .gitignore  Dockerfile_celery  Dockerfile_redis  README.md  Taskfile.yaml  bbsh_api.postman_collection.json  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: bbsh_api.yml  services-webapp.yml  test.yml
bbsh_api/: apps.py  models.py  urls.py  views.py
bbsh_api/.mypy_cache/3.10/: _ast.data.json  _ast.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _markupbase.data.json  _markupbase.meta.json  _socket.data.json  _socket.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  (+75 more)
bbsh_api/migrations/: 0001_initial.py  0002_history_basket.py  0003_menu.py  0004_myuser_points.py  0005_orderlist.py  0006_remove_basket_cost_remove_basket_size.py  0007_basket_size.py  0008_alter_history_user.py  0009_remove_basket_name_remove_basket_size_and_more.py  0010_alter_basket_id_alter_history_id_alter_orderlist_id.py  0011_alter_basket_id.py  0012_orderlist_order_id_alter_basket_id_and_more.py  0013_alter_orderlist_order_id.py  0014_alter_myuser_id.py  0015_history_comments_history_points_orderlist_comments_and_more.py  0016_remove_history_points_remove_myuser_points_and_more.py
bbsh_api/tests/: test_api.py
djangoProject/: settings.py  urls.py
services/periodic/: main.py
services/queue/: Dockerfile  pyproject.toml
(+468 files in other folders)
