[tool.poetry]
name = "poetry-py"
version = "1.0.0"
description = "not yet"
authors = ["Egor251"]
license = "no"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.10.9"
autoflake = "^2.1.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
django = "^4.2.1"
dj-database-url = "^2.0.0"
click = "^8.1.3"
django-stubs = "^4.2.0"
celery = {extras = ["redis"], version = "^5.2.7"}
redis = "^4.5.5"
tasks = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
